Add support for specifying client TLS key/cert in json-based config
Includes updates to EtcdClient/EtcdClusterConfig to ensure that
cached/shared client instances are appropriately reference counted.